feat: настроить стили хедера для десктопа

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BGP AUTO</title>
-  <meta name="description" content="Сайт автосервиса BGP auto.">
+  <meta name="description" content="Автосервис BGP AUTO.">
   <link rel="stylesheet" href="./index.css">
-  <link rel="icon" href="./image/icon.svg" type="image/svg+xml" sizes="any">
+  <link rel="icon" href="./images/icon.svg" type="image/svg+xml" sizes="any">
 </head>
 
 <body class="body">
-  <header class="header" >
+  <header class="header">
     <div class="header__container">
       <a class="header__logo-container" href="#start">
         <div class="header__logo"></div>
@@ -22,12 +22,9 @@
       </a>
       <div class="header__info-container">
         <div class="header__info">
-          <a class="header__reception" href="/reception">
+          <a class="header__reception" href="#reception">
             <div class="header__reception-container">
-              <div>
-                <p class="header__reception-text">Вы записаны на сервис</p>
-                <p class="header__reception-text header__reception-data"></p>
-              </div>
+              <p class="header__reception-text">Заказать обратный звонок</p>
               <div class="header__reception-icon header__reception-icon_inscribed"></div>
             </div>
           </a>
@@ -35,7 +32,6 @@
             <div class="header__address-logo"></div>
             <div>
               <p class="header__address-name">Челябинск, Монтажников, 1/3 </p>
-              <p class="header__address-viewing">Посмотреть на карте</p>
             </div>
           </a>
         </div>
@@ -457,7 +453,7 @@
         </ul>
       </div>
     </section>
-    <section class="address" aria-label="Карта с нашим местоположением и маршрутом подъезда"  id="address">
+    <section class="address" aria-label="Карта с нашим местоположением и маршрутом подъезда" id="address">
       <div class="address__container">
         <h1 class="address__title">Будем рады видеть Вас!</h1>
         <iframe class="address__map"
