feat: сделать открытие и закрытие бургер-меню

--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,8 @@
           </a>
         </div>
         <div class="navigation">
-          <button class="navigation__button-menu navigation__button-menu_close"></button>
-          <nav class="navigation__container">
+          <button class="navigation__button-menu"></button>
+          <nav class="navigation__container navigation__container_hide">
             <ul class="navigation__links">
               <li>
                 <a href="#about-as" class="navigation__link">О НАС</a>
@@ -62,7 +62,7 @@
               </li>
             </ul>
           </nav>
-          <div class="navigation__overlay"></div>
+          <div class="navigation__overlay navigation__overlay_hide"></div>
         </div>
       </div>
     </div>
@@ -482,6 +482,7 @@
       </div>
     </div>
   </footer>
+  <script src="./index.js" defer></script>
 </body>
 
 </html>
