feat: сделать заголовки секций, настроить отступы

--- a/src/index.html
+++ b/src/index.html
@@ -68,23 +68,24 @@
     </div>
   </header>
   <main class="main" id="start">
-    <div class="main__background"></div>
     <h1 class="main__title">Добро пожаловать в автосервис BGP&nbsp;AUTO!</h1>
-    <section class="main__container">
-      <div class="main__title-container">
-        <div class="main__title-icon main__title-icon_red"></div>
-        <h3 class="main__title-text">Ремонт и обслуживание<br />автомобилей VAG группы более 5 лет</h3>
+    <div class="main__background"></div>
+    <section class="greetings">
+      <div class="greetings__title-container">
+        <div class="greetings__title-icon greetings__title-icon_red"></div>
+        <h3 class="greetings__title-text">Ремонт и обслуживание<br />автомобилей VAG группы более 5 лет</h3>
       </div>
-      <div class="main__title-container">
-        <div class="main__title-icon main__title-icon_black"></div>
-        <h3 class="main__title-text">Использование официальной технической<br />документации и специнструмента</h3>
+      <div class="greetings__title-container">
+        <div class="greetings__title-icon greetings__title-icon_black"></div>
+        <h3 class="greetings__title-text">Использование официальной технической<br />документации и специнструмента</h3>
       </div>
-      <div class="main__title-container">
-        <div class="main__title-icon main__title-icon_black"></div>
-        <h3 class="main__title-text">Обслуживание автомобилей других марок</h3>
+      <div class="greetings__title-container">
+        <div class="greetings__title-icon greetings__title-icon_black"></div>
+        <h3 class="greetings__title-text">Обслуживание автомобилей других марок</h3>
       </div>
     </section>
     <section class="about-as" aria-label="Наши мастера и ценности" id="about-as">
+      <h2 class="section__title">О НАС</h2>
       <div class="about-as__container">
         <ul class="about-as__masters">
           <li>
@@ -130,6 +131,7 @@
       </div>
     </section>
     <section class="services" aria-label="Наши основные услуги" id="services">
+      <h2 class="section__title">НАШИ УСЛУГИ</h2>
       <div class="services__container">
         <div class="services__grid">
           <a class="services__grid-item" href="#">
@@ -161,6 +163,7 @@
       </div>
     </section>
     <section class="prices" aria-label="Список работ и их стоимость" id="prices">
+      <h2 class="section__title">СПИСОК РАБОТ И СТОИМОСТЬ</h2>
       <div class="prices__type-work">
         <h3 class="prices__title">Двигатель</h3>
         <ul class="prices__table">
@@ -265,6 +268,7 @@
       </div>
     </section>
     <section class="promotions" aria-label="Наши акционные предложения" id="promotions">
+      <h2 class="section__title">АКЦИИ</h2>
       <ul class="list">
         <li class="list__item">
           <img class="list__item-image" src="./images/promotions-car.jpg"
@@ -306,6 +310,7 @@
       </ul>
     </section>
     <section class="blog" aria-label="Фото и описание наших работ" id="blog">
+      <h2 class="section__title">НАШИ РАБОТЫ</h2>
       <ul class="list">
         <li class="list__item">
           <img class="list__item-image" src="./images/blog-image-1.jpg" alt="Volkswagen Polo 1.6">
@@ -420,6 +425,7 @@
       </ul>
     </section>
     <section class="contacts" aria-label="Наши контакты" id="contacts">
+      <h2 class="section__title">КОНТАКТЫ</h2>
       <div class="contacts__container">
         <h1 class="contacts__title">Свяжитесь с нами по интересующим Вас вопросам</h1>
         <p class="contacts__work">График работы</p>
@@ -454,10 +460,11 @@
       </div>
     </section>
     <section class="address" aria-label="Карта с нашим местоположением и маршрутом подъезда" id="address">
+      <h2 class="section__title">СХЕМА ПРОЕЗДА</h2>
       <div class="address__container">
-        <h1 class="address__title">Будем рады видеть Вас!</h1>
         <iframe class="address__map"
           src="https://yandex.ru/map-widget/v1/?um=constructor%3Af18f2eea116729dbc3556794464d62904adf8e51d636984e93f675d2d8e12216&amp;source=constructor"></iframe>
+        <h3 class="address__title">Будем рады видеть Вас!</h3>
       </div>
     </section>
   </main>
