feat: сделать управление меню навигации и выделение ссылок

--- a/src/index.html
+++ b/src/index.html
@@ -162,7 +162,7 @@
         </div>
       </div>
     </section>
-    <section class="prices" aria-label="Список работ и их стоимость" id="prices">
+    <!-- <section class="prices" aria-label="Список работ и их стоимость" id="prices">
       <h2 class="section__title">СПИСОК РАБОТ И СТОИМОСТЬ</h2>
       <div class="prices__type-work">
         <h3 class="prices__title">Двигатель</h3>
@@ -266,8 +266,8 @@
               факту</span></li>
         </ul>
       </div>
-    </section>
-    <section class="promotions" aria-label="Наши акционные предложения" id="promotions">
+    </section> -->
+    <!-- <section class="promotions" aria-label="Наши акционные предложения" id="promotions">
       <h2 class="section__title">АКЦИИ</h2>
       <ul class="list">
         <li class="list__item">
@@ -308,8 +308,8 @@
           </div>
         </li>
       </ul>
-    </section>
-    <section class="blog" aria-label="Фото и описание наших работ" id="blog">
+    </section> -->
+    <!-- <section class="blog" aria-label="Фото и описание наших работ" id="blog">
       <h2 class="section__title">НАШИ РАБОТЫ</h2>
       <ul class="list">
         <li class="list__item">
@@ -423,7 +423,7 @@
           </div>
         </li>
       </ul>
-    </section>
+    </section> -->
     <section class="contacts" aria-label="Наши контакты" id="contacts">
       <h2 class="section__title">КОНТАКТЫ</h2>
       <div class="contacts__container">
@@ -459,14 +459,14 @@
         </ul>
       </div>
     </section>
-    <section class="address" aria-label="Карта с нашим местоположением и маршрутом подъезда" id="address">
+    <!-- <section class="address" aria-label="Карта с нашим местоположением и маршрутом подъезда" id="address">
       <h2 class="section__title">СХЕМА ПРОЕЗДА</h2>
       <div class="address__container">
         <iframe class="address__map"
           src="https://yandex.ru/map-widget/v1/?um=constructor%3Af18f2eea116729dbc3556794464d62904adf8e51d636984e93f675d2d8e12216&amp;source=constructor"></iframe>
         <h3 class="address__title">Будем рады видеть Вас!</h3>
       </div>
-    </section>
+    </section> -->
   </main>
   <footer class="footer">
     <div class="footer__container">
