feat: настроить выделение ссылок в навигации от положения на странице

--- a/src/index.html
+++ b/src/index.html
@@ -308,8 +308,8 @@
           </div>
         </li>
       </ul>
-    </section> -->
-    <!-- <section class="blog" aria-label="Фото и описание наших работ" id="blog">
+    </section>
+    <section class="blog" aria-label="Фото и описание наших работ" id="blog">
       <h2 class="section__title">НАШИ РАБОТЫ</h2>
       <ul class="list">
         <li class="list__item">
@@ -423,7 +423,7 @@
           </div>
         </li>
       </ul>
-    </section> -->
+    </section>
     <section class="contacts" aria-label="Наши контакты" id="contacts">
       <h2 class="section__title">КОНТАКТЫ</h2>
       <div class="contacts__container">
@@ -459,7 +459,7 @@
         </ul>
       </div>
     </section>
-    <!-- <section class="address" aria-label="Карта с нашим местоположением и маршрутом подъезда" id="address">
+    <section class="address" aria-label="Карта с нашим местоположением и маршрутом подъезда" id="address">
       <h2 class="section__title">СХЕМА ПРОЕЗДА</h2>
       <div class="address__container">
         <iframe class="address__map"
@@ -467,7 +467,7 @@
         <h3 class="address__title">Будем рады видеть Вас!</h3>
       </div>
     </section> -->
-    <a class="button-up" href="#start"></a>
+    <a class="button-up button-up_is-hidden" href="#start"></a>
   </main>
   <footer class="footer">
     <div class="footer__container">
