--- a/src/index.html
+++ b/src/index.html
@@ -473,7 +473,7 @@
     <div class="footer__container">
       <div class="footer__copywriting">
         <div>
-          <span class="footer__copywriting_date">&copy;&nbsp;{new Date().getFullYear()}</span>
+          <span class="footer__copywriting_date">&copy;&nbsp;</span>
           <span class="footer__copywriting_name">BGP&nbsp;AUTO</span>
         </div>
         <span>created&nbsp;by &nbsp;
