--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
               <div class="header__reception-icon header__reception-icon_inscribed"></div>
             </div>
           </a>
-          <a class="header__address-container" href="#address">
+          <a class="header__address-container" href="#map">
             <div class="header__address-logo"></div>
             <div>
               <p class="header__address-name">Челябинск, Монтажников, 1/3 </p>
@@ -58,7 +58,7 @@
                 <a href="#contacts" class="navigation__link">КОНТАКТЫ</a>
               </li>
               <li>
-                <a href="#address" class="navigation__link">АДРЕС</a>
+                <a href="#map" class="navigation__link">КАРТА</a>
               </li>
             </ul>
           </nav>
@@ -267,7 +267,7 @@
         </ul>
       </div>
     </section>
-    <!-- <section class="promotions" aria-label="Наши акционные предложения" id="promotions">
+    <section class="promotions" aria-label="Наши акционные предложения" id="promotions">
       <h2 class="section__title">АКЦИИ</h2>
       <ul class="list">
         <li class="list__item">
@@ -459,14 +459,14 @@
         </ul>
       </div>
     </section>
-    <section class="address" aria-label="Карта с нашим местоположением и маршрутом подъезда" id="address">
+    <section class="map" aria-label="Карта с нашим местоположением и маршрутом подъезда" id="map">
       <h2 class="section__title">СХЕМА ПРОЕЗДА</h2>
-      <div class="address__container">
-        <iframe class="address__map"
+      <div class="map__container">
+        <iframe class="map__iframe"
           src="https://yandex.ru/map-widget/v1/?um=constructor%3Af18f2eea116729dbc3556794464d62904adf8e51d636984e93f675d2d8e12216&amp;source=constructor"></iframe>
-        <h3 class="address__title">Будем рады видеть Вас!</h3>
+        <h3 class="map__title">Будем рады видеть Вас!</h3>
       </div>
-    </section> -->
+    </section>
     <a class="button-up button-up_is-hidden" href="#start"></a>
   </main>
   <footer class="footer">
